# safe-cli

.github/: labeler.yml
.github/workflows/: label.yml  network-test.yml  pr.yml  rust.yml
safe-api/: Cargo.toml
safe-api/src/api/: common.rs
safe-api/src/api/app/: auth.rs  consts.rs  fake_scl.rs  fetch.rs  files.rs  keys.rs  mod.rs  nrs.rs  nrs_map.rs  safe_client_libs.rs  safe_net.rs  test_helpers.rs  wallet.rs  xorurl.rs
safe-api/src/api/authd_client/: authd_client_api.rs
safe-api/src/api/authenticator/: auth.rs
safe-authd/: shared.rs
safe-cli/: Cargo.toml
safe-cli/operations/: auth_and_connect.rs  fake_auth.rs
safe-cmd-test-utilities/: Cargo.toml
safe-ffi/: Cargo.toml  build.rs
safe-ffi/ffi/: ffi_structs.rs  mod.rs  sequence.rs  xorurl.rs
safe_api_ffi/ffi/: ffi_structs.rs  keys.rs
src/api/: mod.rs
