[package]
name = "safe-ffi"
version = "0.14.0"
description = "SAFE API FFI"
authors = ["Ravinder Jangra <ravinderjangra@live.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
build = "build.rs"
edition = "2018"

[lib]
name = "safe_ffi"
crate_type = ["staticlib", "rlib", "cdylib"]
path = "lib.rs"

[dependencies]
async-std = "1.6.0"
ffi_utils = "~0.16.0"
# Required by ffi_utils macros.
log = "~0.4.8"
safe-nd = { git = "https://github.com/ravinderjangra/safe-nd.git", branch = "remove-xorname" }
serde = "1.0.91"
serde_json = "1.0.39"
safe_core = { git = "https://github.com/ravinderjangra/safe_client_libs", branch = "update-xorname" }
bincode = "1.2.1"
safe_authenticator_ffi = { git = "https://github.com/ravinderjangra/safe_client_libs", branch = "update-xorname" }
xor_name = "1"

[dependencies.safe-api]
path = "../safe-api"
default-features = false
features = ["app", "authd_client"]

[dev-dependencies]
unwrap = "1.2.1"

[build-dependencies]
safe_bindgen = { git = "https://github.com/maidsafe/safe_bindgen", optional = true }
safe-nd = { git = "https://github.com/ravinderjangra/safe-nd.git", branch = "remove-xorname" }
unwrap = "1.2.1"
xor_name = "1"

[features]
bindings = ["safe_bindgen"]
scl-mock = ["safe-api/scl-mock", "safe_authenticator_ffi/mock-network"]
